[tool.poetry]
name = "repo_artifactory_lookup_issue"
version = "0.1.0"
description = "Test repository for Renovate bug reproduction"
authors = ["Shashi Kanth <shashikanth972@outlook.com>"]
readme = "README.md"
packages = [{include = "app"}, {include = "helpers"}]

[tool.poetry.dependencies]
python = "^3.13"
Flask = "^3.1.1"
Flask-Compress = "^1.18"
grpcio-tools = "^1.74.0"
gunicorn = "^23.0.0"
openpyxl = "^3.1.5"
protobuf = "^6.31.1"
redis = "^6.2.0"
rq = "^2.4.1"
rq-dashboard = "^0.8.4"

[tool.poetry.group.dev.dependencies]
werkzeug = "^3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
repo-artifactory-issue = "run:main"
